# ethics_bot

./: .gitignore  pyproject.toml
data/bible/: bible_metadata.parquet
data/gita_english/: gita_english_embeddings.npy  gita_english_index.faiss  gita_english_metadata.parquet
data/metadata/: bible_metadata.parquet  quran_english_metadata.parquet
data/quran_english/: quran_english_metadata.parquet
data/raw/: quran-simple-clean.txt
ethics_bot/scripts/: enrich_text.py  process_bible.py  process_texts.py  raw_to_embed_texts.py
ethics_bot/utils/: common.py  constants.py
notebooks/: random.ipynb
